# USER_REAXFF_HIP

./: CMakeLists.txt  Makefile  Makefile.auto  Makefile.hip  README  fix_qeq_reaxff.cpp  fix_qeq_reaxff.h  fix_reaxff.cpp  fix_reaxff.h  lmpgitversion.h  log.txt  packages_angle.h  packages_fix.h  packages_nbin.h  packages_npair.h  packages_nstencil.h  packages_ntopo.h  packages_pair.h  pair_reaxff.cpp  pair_reaxff.h  reaxff_allocate.cpp  reaxff_allocate.h  reaxff_analyze.cpp  reaxff_analyze.h  reaxff_basic_comm.cpp  reaxff_basic_comm.h  reaxff_bond_orders.cpp  reaxff_bond_orders.h  reaxff_bonds.cpp  reaxff_bonds.h  reaxff_box.cpp  reaxff_box.h  reaxff_charges.cpp  reaxff_charges.h  reaxff_comm_tools.cpp  reaxff_comm_tools.h  reaxff_control.cpp  reaxff_control.h  reaxff_ffield.cpp  reaxff_ffield.h  (+107 more)
